style.css
/* ... */
#hero h1:nth-child(1) span {
    animation-delay: 0.5s;
}

#hero h1:nth-child(2) span {
    animation-delay: 1.5s;
}

#hero h1:nth-child(3) span {
    animation-delay: 2.5s;
}


/* End Hero Section */


/* Services Section */

#services .services {
    flex-direction: column;
    text-align: center;
    max-width: 1500px;
    margin: 0 auto;
    padding: 100px 0;
}

#services .service-top {
    max-width: 500px;
    margin: 0 auto;
}

#services .service-bottom {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    margin-top: 50px;
}

#services .service-item {
    flex-basis: 80%;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    flex-direction: column;
    padding: 30px;
    border-radius: 10px;
    background-image: url(./img/img-1.png);
    background-size: cover;
    margin: 10px 5%;
    position: relative;
    z-index: 1;
    overflow: hidden;
}

#services .service-item::after {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    background-image: linear-gradient(60deg, #8d267c 0%, #209b80 100%);
    /*can't find*/
    opacity: 0.9;
    z-index: -1;
}

#services .service-bottom .icon {
    height: 80px;
    width: 80px;
    margin-bottom: 20px;
}

#services .service-item h2 {
    font-size: 2rem;
    color: white;
    margin-bottom: 10px;
    text-transform: uppercase;
}

#services .service-item p {
    color: white;
    text-align: left;
}


/* End Services Section */


/* Projects section */

#projects .projects {
    flex-direction: column;
    max-width: 1200px;
    /*saw no change when I changed it*/
    margin: 0 auto;
    padding: 100px 0;
    text-align: center;
    /*align-items: center;*/
}

#projects .projects-header h1 {
    margin-bottom: 50px;
    color: rgb(3, 49, 117);
    text-align: center;
    align-items: center;
}

#projects .all-projects {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
}

#projects .all-projects2 {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    text-align: center;
}

#projects .project-about {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    /*saw no change*/
    margin: 20px auto;
    overflow: hidden;
    border-radius: 10px;
    text-align: center;
}

#projects .project-item {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    /*saw no change*/
    margin: 20px auto;
    overflow: hidden;
    border-radius: 10px;
    text-align: center;
}

#projects .project-info {
    padding: 30px;
    flex-basis: 50%;
    /*width of project boxes, was 60********************/
    height: 100%;
    display: flex;
    /*align-items: flex-start;*/
    align-items: center;
    justify-content: center;
    flex-direction: column;
    background-image: linear-gradient(60deg, rgba(229, 229, 229, 0.533) 0%, rgba(226, 226, 226, 0.533) 100%);
    /*gradient within project boxes, 
    right is top right corner, left is bottom left corner
    I like this combo: (60deg, rgb(180, 205, 233) 0%, rgb(176, 204, 234) 100%) light blues*/
    color: rgb(3, 49, 117); /*was 78, 107, 151*/
    /*text-align: center;*/
}

#projects .project-info h1 {
    font-size: 4rem;
    font-weight: 500;
    /*margin-left: 70px;*/
    text-align: center;
}

#projects .project-info h2 {
    font-size: 1.8rem;
    font-weight: 575;
    margin-top: 10px;
    text-align: center;
}

#projects .project-info h3 {
    /*main header*/
    font-size: 4rem;
    font-weight: 500;
    /*margin-left: 98px;*/
    text-align: center;
}

#projects .project-info p {
    color: rgb(3, 49, 117);
    text-align: left;
    /*align-items: left;*/
}

#projects .project-img {
    flex-basis: 50%;
    /*was 80***********/
    height: 300px;
    overflow: hidden;
    position: relative;
    text-align: center;
}

#projects .project-img:after {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    /*background-image: linear-gradient(60deg, #b3c7de 0%, #acc3db 100%);*/
    /*  91, 139, 188, 0.533  */
    opacity: 0.7;
    text-align: center;
}

#projects .project-img img {
    transition: 0.3s ease transform;
}

#projects .project-item:hover .project-img img {
    transform: scale(1.1);
}


/* End Projects section */


/* About Section */

#about .about container {
    /*flex-direction: column-reverse;
    text-align: center;
    max-width: 559px;
    margin: 0 auto;
    padding: 100px 20px;
    margin-left: 140px;*/

    display: flex;
    width: 50%;
}

#about .about-person {
    flex: 1;
    /*border: 2px solid blueviolet;*/
    margin: 10px;
    max-width: 559px;    
  }
  
#about .about-person:first-child {
    margin-right: 20px;
  }

#about .col-left {
    width: 250px;
    height: 360px;
    margin-left: auto;
    margin-right: auto;
}

#about .col-right {
    width: 100%;
}

#about .col-right h2 {
    font-size: 1.8rem;
    font-weight: 500;
    letter-spacing: 0.2rem;
    margin-bottom: 10px;
    text-align: center;
}

#about .col-right p {
    margin-bottom: 20px;
    color: rgb(3, 49, 117);
    text-align: center;
    /*smallest text*/
}

#about .col-right .cta {
    color: black;
    margin-bottom: 50px;
    padding: 10px 20px;
    font-size: 2rem;
}

#about .col-left .about-img {
    height: 100%;
    width: 100%;
    position: relative;
    border: 10px solid white;
    /*margin-bottom: 50px; did nothing */
}

#about .col-left .about-img::after {
    content: '';
    position: absolute;
    left: -22px; /*was-33*/
    top: 14px; /*was19*/
    height: 98%;
    width: 98%;
    border: 7px solid rgb(3, 49, 117);
    /*box around img*/
    z-index: -1;
    /*margin-bottom: 50px; did nothing*/
    /*margin-left: auto;
    margin-right: auto; did nothing */
}
/* ... */

